[gd_scene load_steps=7 format=2]

[ext_resource path="res://Art/UI/ButtonStyles/ButtonNormal.tres" type="StyleBox" id=1]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonHover.tres" type="StyleBox" id=2]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonPressed.tres" type="StyleBox" id=3]
[ext_resource path="res://Fonts/FontNormal.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/UI/FadingNode.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/BoardChat.gd" type="Script" id=6]

[node name="LobbyChat" type="Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
mouse_filter = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadingNode" parent="." instance=ExtResource( 5 )]

[node name="LobbyChat" type="Node2D" parent="."]
z_index = 69
z_as_relative = false

[node name="LobbyChat" type="Control" parent="LobbyChat"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -278.0
margin_right = -14.0
margin_bottom = 278.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer2" type="ScrollContainer" parent="LobbyChat/LobbyChat"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -36.0
custom_styles/bg = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyChat/LobbyChat/ScrollContainer2"]
margin_left = 2.0
margin_top = 2.0
margin_right = 2.0
margin_bottom = 2.0

[node name="SendChatButton" type="Button" parent="LobbyChat/LobbyChat"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -25.0
margin_right = 138.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Send Message"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit4" type="LineEdit" parent="LobbyChat/LobbyChat"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = -24.0
margin_bottom = -1.0
custom_styles/read_only = ExtResource( 3 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="LobbyChat/LobbyChat/SendChatButton" to="." method="sendMessage"]
[connection signal="text_entered" from="LobbyChat/LobbyChat/LineEdit4" to="." method="sendMessage"]
